tests/autoscaler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ca-test-deployment
  labels:
    app: ca-nginx
spec:
  replicas: 15
  selector:
    matchLabels:
      app: ca-nginx
  template:
    metadata:
      labels:
        app: ca-nginx
    spec:
      containers:
      - name: ca-nginx
        image: nginx
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "200m"
            memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ca-test-service-nginx
  labels:
    app: ca-nginx
spec:
  type: LoadBalancer
  selector:
    app: ca-nginx
  ports:
  - port: 80
    targetPort: 80
